// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreeLevels with first and second level selected 1`] = `
<div>
  <label>
    department
    <select
      name="state"
      onChange={[Function]}
      value="Tarija"
    >
      <option
        value=""
      >
        
      </option>
      <option
        value="Beni"
      >
        Beni
      </option>
      <option
        value="Cochabamba"
      >
        Cochabamba
      </option>
    </select>
  </label>
  <label>
    province
    <select
      name="city"
      onChange={[Function]}
      value="Méndez"
    >
      <option
        value=""
      >
        
      </option>
    </select>
  </label>
  <label>
    city
    <select
      name="neighborhood"
      onChange={[Function]}
      value=""
    >
      <option
        value=""
      />
    </select>
  </label>
</div>
`;

exports[`ThreeLevels with first level selected and second level not selected 1`] = `
<div>
  <label>
    department
    <select
      name="state"
      onChange={[Function]}
      value="Tarija"
    >
      <option
        value=""
      >
        
      </option>
      <option
        value="Beni"
      >
        Beni
      </option>
      <option
        value="Cochabamba"
      >
        Cochabamba
      </option>
    </select>
  </label>
  <label>
    province
    <select
      name="city"
      onChange={[Function]}
      value=""
    >
      <option
        value=""
      >
        
      </option>
    </select>
  </label>
  <label>
    city
    <select
      name="neighborhood"
      onChange={[Function]}
      value=""
    >
      <option
        value=""
      />
    </select>
  </label>
</div>
`;

exports[`ThreeLevels with first, second and third level and postalCode selected 1`] = `
<div>
  <label>
    department
    <select
      name="state"
      onChange={[Function]}
      value="Tarija"
    >
      <option
        value=""
      >
        
      </option>
      <option
        value="Beni"
      >
        Beni
      </option>
      <option
        value="Cochabamba"
      >
        Cochabamba
      </option>
    </select>
  </label>
  <label>
    province
    <select
      name="city"
      onChange={[Function]}
      value="Méndez"
    >
      <option
        value=""
      >
        
      </option>
    </select>
  </label>
  <label>
    city
    <select
      name="neighborhood"
      onChange={[Function]}
      value="Canasmoro___90400"
    >
      <option
        value=""
      />
    </select>
  </label>
</div>
`;

exports[`ThreeLevels with first, second and third level selected and not postal code 1`] = `
<div>
  <label>
    department
    <select
      name="state"
      onChange={[Function]}
      value="Tarija"
    >
      <option
        value=""
      >
        
      </option>
      <option
        value="Beni"
      >
        Beni
      </option>
      <option
        value="Cochabamba"
      >
        Cochabamba
      </option>
    </select>
  </label>
  <label>
    province
    <select
      name="city"
      onChange={[Function]}
      value="Méndez"
    >
      <option
        value=""
      >
        
      </option>
    </select>
  </label>
  <label>
    city
    <select
      name="neighborhood"
      onChange={[Function]}
      value=""
    >
      <option
        value=""
      />
    </select>
  </label>
</div>
`;

exports[`ThreeLevels without first and second level selected 1`] = `
<div>
  <label>
    department
    <select
      name="state"
      onChange={[Function]}
      value=""
    >
      <option
        value=""
      >
        
      </option>
      <option
        value="Beni"
      >
        Beni
      </option>
      <option
        value="Cochabamba"
      >
        Cochabamba
      </option>
    </select>
  </label>
  <label>
    province
    <select
      name="city"
      onChange={[Function]}
      value=""
    >
      <option
        value=""
      >
        
      </option>
    </select>
  </label>
  <label>
    city
    <select
      name="neighborhood"
      onChange={[Function]}
      value=""
    >
      <option
        value=""
      />
    </select>
  </label>
</div>
`;
